--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,21 @@ html {
     scroll-behavior: smooth;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
-    background: url('../img/background2.gif') no-repeat center center fixed;
-    background-size: 103%;
+    background: url('../img/background2.gif');
+    background-size: cover; /* Ensures the image covers the entire screen */
+    background-repeat: no-repeat; /* Prevents tiling */
+    background-position: center; /* Centers the image */
+    height: 100vh; /* Ensures it spans the full height of the viewport */
+    width: 100%; /* Ensures it spans the full width of the viewport */
     color: whitesmoke;
     margin: 0;  /* Add this to remove default margin */
     font-family: Poppins, sans-serif;
