--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
 
 body {
     background: url('../img/background2.gif');
+    background-color: #0B0D13;
     background-size: cover; /* Ensures the image covers the entire screen */
     background-repeat: no-repeat; /* Prevents tiling */
     background-position: center; /* Centers the image */
