--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,12 @@ nav {
     display: flex; /* Arrange aside and services horizontally */
 }
 
+#section-2 .title {
+    font-weight: 200;
+}
+
+
+
 .services
 {
   max-width: 700px;
@@ -231,6 +237,10 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-bottom: 20px;
+}
+
+.answer p{
+    font-weight: 200;
 }
 
 .question h3
@@ -380,3 +390,8 @@ aside {
 .test {
     height: 1300px;
 }
+
+#section-3 .title {
+    font-weight: 200;
+}
+
