--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,11 @@ aside {
 
 @media screen and (max-width: 480px) {
     /* Навигация */
+    body {
+        background: none;
+        background-color: rgb(22, 22, 24);
+    }
+    
     nav {
         padding: 10px 20px;
         position: fixed;
