--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,7 @@ aside {
     nav {
         padding: 10px 20px;
         position: fixed;
+        background-color: rgb(22, 22, 24);
     }
 
     #logo img {
