--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     height: 100vh;
     width: 100%;
     color: whitesmoke;
