--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ aside {
 
     /* Секция 1 */
     .text1-s1 {
-        font-size: 1.5em;
+        font-size: 2em;
         padding-left: 20px;
         padding-right: 20px;
     }
@@ -633,6 +633,8 @@ aside {
         padding-left: 20px;
         padding-right: 20px ;    
         text-align: left;
+        margin-top: 60px;
+        margin-bottom: 40px;
     }
 
     /* Информационные блоки в сетку 2х2 */
