--- a/css/style.css
+++ b/css/style.css
@@ -613,6 +613,7 @@ aside {
     margin-right: auto;
     position: flex;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 #footer-contact h2:hover {
