--- a/css/style.css
+++ b/css/style.css
@@ -674,11 +674,19 @@ aside {
 
 /* Footer Content Grid */
 .footer-content {
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
-    gap: 4rem;
+    display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid rgba(255,255,255,0.1);
     padding-bottom: 4rem;
+}
+
+.footer-content h2 {
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+.footer-content span{
+    font-family: "league spartan";
 }
 
 /* Logo Styling */
