modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     color: whitesmoke;
     margin: 0;
-    font-family: Montserrat;
+    font-family: Nunito;
     line-height: 1.1;
 }
 
