--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,8 @@ nav {
     font-size: 18px;
     padding: 10px;
     transition: all 0.3s ease;
-    margin-right: 30px   
+    margin-right: 30px;   
+    z-index: 91263;
 }
 
 
@@ -885,7 +886,6 @@ aside {
 .footer-newsletter {
     display: flex;
     border-bottom: 1px solid rgba(255,255,255,0.2);
-    padding-bottom: 0.5rem;
     width: 300px;
 }
 
